[gd_scene load_steps=18 format=2]

[ext_resource path="res://nanogames/neo_highway/main.gd" type="Script" id=1]
[ext_resource path="res://nanogames/neo_highway/driver/driver.tscn" type="PackedScene" id=2]
[ext_resource path="res://nanogames/neo_highway/_assets/obstacle.png" type="Texture" id=3]
[ext_resource path="res://nanogames/neo_highway/_assets/warning.png" type="Texture" id=4]
[ext_resource path="res://nanogames/neo_highway/_assets/enemy.png" type="Texture" id=5]
[ext_resource path="res://nanogames/neo_highway/_assets/background.png" type="Texture" id=6]
[ext_resource path="res://shaders/texture_scroll.gdshader" type="Shader" id=7]
[ext_resource path="res://nanogames/neo_highway/_assets/music.ogg" type="AudioStream" id=8]
[ext_resource path="res://nanogames/neo_highway/_assets/crash.wav" type="AudioStream" id=9]
[ext_resource path="res://nanogames/neo_highway/_assets/vroom.wav" type="AudioStream" id=10]
[ext_resource path="res://nanogames/neo_highway/_assets/alarm.wav" type="AudioStream" id=11]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 0, -50 )
b = Vector2( 0, 50 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 7 )
shader_param/direction_speed = Vector2( -1, 0 )
shader_param/offset_x = 0.0
shader_param/offset_y = 0.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 7 )
shader_param/direction_speed = Vector2( -6, 0 )
shader_param/offset_x = 0.0
shader_param/offset_y = 0.0

[sub_resource type="Animation" id=6]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CrashHitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground/Enemy:self_modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Foreground/CrashVisual:color:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Foreground/CrashVisual:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("CrashNoise")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("CrashHitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground/Enemy:self_modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("CrashHitbox/Vroom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Driver" parent="." instance=ExtResource( 2 )]
position = Vector2( 480, 360 )

[node name="CrashHitbox" type="Area2D" parent="."]
position = Vector2( 480, 0 )
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrashHitbox"]
shape = SubResource( 1 )
disabled = true

[node name="Vroom" type="AudioStreamPlayer2D" parent="CrashHitbox"]
stream = ExtResource( 10 )
bus = "Effects"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 480, 360 )
current = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
bus = "Music"

[node name="CrashNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Effects"

[node name="Scenery" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="TextureRect" parent="Scenery"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -720.0
margin_bottom = -540.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TopObstacle" type="TextureRect" parent="Scenery"]
visible = false
material = SubResource( 3 )
anchor_right = 1.0
margin_right = -720.0
margin_bottom = 32.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomObstacle" type="TextureRect" parent="Scenery"]
visible = false
material = SubResource( 3 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -128.0
margin_right = -720.0
margin_bottom = -96.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
stretch_mode = 2
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Foreground" type="CanvasLayer" parent="."]

[node name="Enemy" type="TextureRect" parent="Foreground"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 3.05176e-05
margin_right = -720.0
margin_bottom = 25.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 17 )
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="Control" parent="Foreground"]
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Foreground/Warning"]
visible = false
margin_right = 35.0
margin_bottom = 25.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 16 )
texture = ExtResource( 4 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alarm" type="AudioStreamPlayer2D" parent="Foreground/Warning"]
scale = Vector2( 4, 4 )
stream = ExtResource( 11 )
bus = "Effects"

[node name="CrashVisual" type="ColorRect" parent="Foreground"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="EnemySpawn" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/RESET = SubResource( 6 )
anims/crash = SubResource( 4 )
anims/enemy_move = SubResource( 5 )

[connection signal="hit" from="Driver" to="." method="_on_Driver_hit"]
[connection signal="timeout" from="EnemySpawn" to="." method="_on_EnemySpawn_timeout"]
